Fix: Overlapping elements on mobile in About and Experience

--- a/src/Components/Styles/MobileNavbar.css
+++ b/src/Components/Styles/MobileNavbar.css
@@ -1,6 +1,6 @@
 a {
     color: inherit;
-    text-decoration: none;
+    text-decoration: none !important;
 }
 
 ul {
