--- a/src/Pages/Styles/About.css
+++ b/src/Pages/Styles/About.css
@@ -63,7 +63,7 @@ body {
 
 @media (max-width: 750px) {
   .intro {
-    width: 400px;
+    width: 350px;
   }
 
   .title {
@@ -77,7 +77,7 @@ body {
   .avatar {
     position: absolute;
     top: 3.2em;
-    right: 3.2em;
+    right: 1.2em;
     width: 75px;
   }
 
@@ -91,7 +91,6 @@ body {
 
   .buttons {
     flex-direction: row;
-    margin: 2em 4em 0 3em;
+    margin: 2em 2em 0 1em;
   }
-
 }
